<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Buymate</string>
    <string name="app_version" translatable="false">1.0.1</string>
    <string name="app_link" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="app_email" translatable="false">hemerickservices@gmail.com</string>
    <string name="app_lifetime_product_id" translatable="false">com.buymate.lifetime_subscription</string>
    <string name="default_web_client_id" translatable="false">401382920363-u289nhkse3o3fi2tevrq68m7oic9vaj6.apps.googleusercontent.com</string>
    <string name="open_icon_content_description">Open</string>
    <string name="ShopCopyAdapter__copy_successful">Item copied to</string>
    <string name="ShopMoveAdapter__move_successful">Item moved to</string>
    <string name="ViewPagerAdapter_heading_1">Always remember what to buy</string>
    <string name="ViewPagerAdapter_heading_2">Budget wisely, avoid impulse buys</string>
    <string name="ViewPagerAdapter_heading_3">Share your list effortlessly</string>
    <string name="ViewPagerAdapter_sub_heading_1">Easily make list and never forget to buy anything again.</string>
    <string name="ViewPagerAdapter_sub_heading_2">Manage your budget, shop only what\'s on your list</string>
    <string name="ViewPagerAdapter_sub_heading_3">Connect with family, friends and colleagues by sharing list as text or PDFs.</string>
    <string name="Firebase__backup_text_heading">Backing up to the cloud</string>
    <string name="Firebase__backup_text_subheading">Please wait…</string>
    <string name="Firebase__backup_successful">Backup successful</string>
    <string name="Firebase__restore_text_heading">Restoring data from the cloud</string>
    <string name="Firebase__restore_text_subheading">Please wait…</string>
    <string name="Firebase__restore_no_list_found">No list found</string>
    <string name="Firebase__restore_no_notes_found">No notes found</string>
    <string name="Firebase__restore_completed">Restore completed</string>
    <string name="Firebase__error">Error: </string>
    <string name="ShoppingWidgetService__added">Added </string>
    <string name="BackupActivity__loginBeforeBackup">Please log in before proceeding to backup</string>
    <string name="BackupActivity__loginBeforeRestore">Please ensure you\'re logged in before restoring data</string>
    <string name="BackupActivity__restoreHeader">Restore data</string>
    <string name="BackupActivity__restoreWarning">This action will replace your current data with the last backed up data. Any unsaved changes will be lost. Are you sure you want to proceed?</string>
    <string name="BackupActivity__restoreProceedBtn">Proceed</string>
    <string name="BackupActivity__restoreCancelBtn">Cancel</string>
    <string name="ChangePasswordActivity__passwordUpdateSuccess">Password updated</string>
    <string name="ChangePasswordActivity__passwordUpdateFailed">Password update failed</string>
    <string name="ChangePasswordActivity__error">Error: </string>
    <string name="ChangePasswordActivity__passwordNotMatched">Password does not match</string>
    <string name="ChangePasswordActivity__passwordLengthFailed">Password must be at least 6 characters long</string>
    <string name="ChangePasswordActivity__retypePassword">Retype password to proceed</string>
    <string name="ChangePasswordActivity__enterNewPassword">Enter your new password</string>
    <string name="ChangePasswordActivity__enterCurrentPassword">Enter your current password</string>
    <string name="ConfigurePasscodeActivity__deviceNotSupported">Device not supported</string>
    <string name="ConfigurePasscodeActivity__hardwareUnavailable">Hardware unavailable</string>
    <string name="ConfigurePasscodeActivity__fingerprintNotSet">Fingerprint not set for this device</string>
    <string name="ConfigurePasscodeActivity__verifyFingerprint">Verify fingerprint</string>
    <string name="ConfigurePasscodeActivity__usePassword">Use password</string>
    <string name="ConfigurePasscodeActivity__insert4digitPassword">Insert 4 digit password</string>
    <string name="ConfigurePasscodeActivity__confirmPassword">Confirm password</string>
    <string name="ConfigurePasscodeActivity__retypePassword">Retype password to proceed</string>
    <string name="ConfigurePasscodeActivity__success">Success</string>
    <string name="ConfigurePasscodeActivity__passwordNotMatched">Password does not match</string>
    <string name="ConfigurePasscodeActivity__insertPassword">Insert password</string>
    <string name="ConfigurePasscodeActivity__letsVerifyYou">Help us verify that it is actually you, insert your current password</string>
    <string name="ConfigurePasscodeActivity__appLockRemoved">App lock removed</string>
    <string name="ConfigurePasscodeActivity__wrongPassword">Wrong password</string>
    <string name="ConfigurePasscodeActivity__fingerprintEnabled">Fingerprint enabled</string>
    <string name="ConfigurePasscodeActivity__setupPassword">Set up password</string>
    <string name="ConfigurePasscodeActivity__changePassword">Change password</string>
    <string name="CreateNoteActivity__untitled">Untitled</string>
    <string name="CreateNoteActivity__deleteNote">Delete</string>
    <string name="CreateNoteActivity__deleteWarning">This action cannot be undone</string>
    <string name="CreateNoteActivity__voicePrompt">Listening</string>
    <string name="CreateNoteActivity__send_message_via">Send message via:</string>
    <string name="FavouritesFragment__addItemToList">Add an item to your list</string>
    <string name="FavouritesFragment__untitled">Untitled</string>
    <string name="FavouritesFragment__alreadyExist">Item already exist</string>
    <string name="FavouritesFragment__emptyName">Item name field is empty</string>
    <string name="FavouritesFragment__toolbarStarred">Starred</string>
    <string name="FavouritesFragment__multipleDelete">Delete these items</string>
    <string name="FavouritesFragment__singleDelete">Delete this item</string>
    <string name="FavouritesFragment__deleteWarning">This action cannot be undone</string>
    <string name="FavouritesFragment__removeFromStarred">Remove from starred</string>
    <string name="FavouritesFragment__remove">Remove</string>
    <string name="FavouritesFragment__unstar">Unstar</string>
    <string name="FavouritesFragment__star">Star item</string>
    <string name="FavouritesFragment__itemsChecked">Items checked</string>
    <string name="FavouritesFragment__itemStarred">Item starred</string>
    <string name="FavouritesFragment__itemUnstarred">Item unstarred</string>
    <string name="FavouritesFragment__addPhoto">Add image</string>
    <string name="FavouritesFragment__updatePhoto">Update image</string>
    <string name="FavouritesFragment__loginPrompt">Please login before you can proceed</string>
    <string name="FavouritesFragment__insertImageFailed">Error: Couldn\'t insert image</string>
    <string name="FavouritesFragment__error">Error: </string>
    <string name="FavouritesFragment__emptyPrice">Item price field is empty</string>
    <string name="FavouritesFragment__voicePrompt">Listening</string>
    <string name="FavouritesFragment__emptyQuantity">Item quantity field is empty</string>
    <string name="FavouritesFragment__Total">TOTAL:</string>
    <string name="FavouritesFragment__shareBtmText1">Improve your shopping experience with Buymate.</string>
    <string name="FavouritesFragment__shareBtmText2">Download Buymate on Google Play:</string>
    <string name="FavouritesFragment__shareIntentText">Send message via</string>
    <string name="FavouritesFragment__no">NO</string>
    <string name="FavouritesFragment__item">ITEM</string>
    <string name="FavouritesFragment__quantity">QUANTITY</string>
    <string name="FavouritesFragment__unit">UNIT</string>
    <string name="FavouritesFragment__price">PRICE</string>
    <string name="FavouritesFragment__contactUs">Contact us at:</string>
    <string name="FavouritesFragment__pdfDownloadedTo">PDF downloaded to</string>
    <string name="HomeActivity__pressBack">Press back again to exit app</string>
    <string name="HomeFragment__feedback">Feedback</string>
    <string name="HomeFragment__accountEmail">Account Email: </string>
    <string name="HomeFragment__appVersion">App Version: </string>
    <string name="HomeFragment__device">Device: </string>
    <string name="HomeFragment__model">Model: </string>
    <string name="HomeFragment__brand">Brand: </string>
    <string name="HomeFragment__osVersion">OS Version: </string>
    <string name="HomeFragment__sdkVersion">SDK Version: </string>
    <string name="custom_image_upload_dialog__header">Notice !!!</string>
    <string name="custom_image_upload_dialog__login_btn">Log in</string>
    <string name="custom_image_upload_dialog__cancel_btn">Cancel</string>
    <string name="custom_premium_remove_ads_description_dialog__header">Remove ads</string>
    <string name="custom_premium_remove_ads_description_dialog__sub_header">Enjoy ad-free usage for uninterrupted app enjoyment with our premium features.</string>
    <string name="custom_premium_remove_ads_description_dialog__okBtn">Close</string>
    <string name="no_connection_layout_no_connection_text_1">No Connection</string>
    <string name="no_connection_layout_no_connection_text_2">No internet connection found. Check</string>
    <string name="no_connection_layout_no_connection_text_3">your connection or try again.</string>
    <string name="no_connection_layout_try_again">Try again</string>
    <string name="update_category_name_layout_header_text">Rename</string>
    <string name="update_category_name_textBox_hint">List name</string>
    <string name="update_category_name_layout_button_text">Save</string>
    <string name="update_item_name_layout_header_text">Rename</string>
    <string name="update_item_name_textBox_hint">Item name</string>
    <string name="update_item_name_layout_button_text">Save</string>
    <string name="upgrade_required_layout_upgrade_text_1">Upgrade Required</string>
    <string name="upgrade_required_layout_upgrade_text_2">Upgrade to Buymate lifetime subscription to enjoy this feature and more!</string>
    <string name="upgrade_required_layout_upgradeBtn">Upgrade</string>
    <string name="upgrade_required_layout_cancelButton">Cancel</string>
    <string name="voice_typing_layout_Heading">Add to list</string>
    <string name="voice_typing_layout_description">Item name</string>
    <string name="voice_typing_cancelButton">Cancel</string>
    <string name="voice_typing_addBtn">Add</string>
    <string name="favourites_toolbar_share_text">Share</string>
    <string name="favourites_toolbar_voice_text">Voice typing</string>
    <string name="favourites_toolbar_sort_text">Sort by</string>
    <string name="favourites_toolbar_check_text">Check all</string>
    <string name="favourites_toolbar_unCheck_text">Uncheck all</string>
    <string name="item_toolbar_menu_search_text">Search</string>
    <string name="item_toolbar_menu_voice_text">Voice typing</string>
    <string name="item_toolbar_menu_rename_text">Rename list</string>
    <string name="item_toolbar_menu_share_text">Share</string>
    <string name="item_toolbar_menu_sort_text">Sort by</string>
    <string name="item_toolbar_menu_check_text">Check all</string>
    <string name="item_toolbar_menu_unCheck_text">Uncheck all</string>
    <string name="item_toolbar_menu_reminder_text">Set alarm</string>
    <string name="nav_home_text">Home</string>
    <string name="nav_premium_text">Premium</string>
    <string name="nav_reminder_text">Set alarm</string>
    <string name="nav_extras_text">Extras</string>
    <string name="nav_rate_text">Rate app</string>
    <string name="nav_message_text">Message us</string>
    <string name="nav_settings_text">Settings</string>
    <string name="nav_about_text">About</string>
</resources>