<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:icon="@drawable/final_regular_search_icon"
        android:title="@string/item_toolbar_menu_search_text"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/voice"
        android:title="@string/item_toolbar_menu_voice_text"
        app:showAsAction="ifRoom"
        android:icon="@drawable/final_regular_voice_icon"/>

    <item
        android:id="@+id/rename"
        android:title="@string/item_toolbar_menu_rename_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:title="@string/item_toolbar_menu_share_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort"
        android:title="@string/item_toolbar_menu_sort_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/check"
        android:title="@string/item_toolbar_menu_check_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/unCheck"
        android:title="@string/item_toolbar_menu_unCheck_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/reminder"
        android:title="@string/item_toolbar_menu_reminder_text"
        app:showAsAction="never" />

</menu>