<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/final_regular_home_icon"
            android:title="@string/nav_home_text" />

        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/final_regular_diamond_icon"
            android:title="@string/nav_premium_text" />

        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/final_regular_reminder_icon"
            android:title="@string/nav_reminder_text"/>

    </group>


    <item android:title="@string/nav_extras_text">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/final_regular_star_icon"
                    android:title="@string/nav_rate_text" />

                <item
                    android:id="@+id/nav_message"
                    android:icon="@drawable/final_regular_message_icon"
                    android:title="@string/nav_message_text" />

                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/final_regular_settings_icon"
                    android:title="@string/nav_settings_text" />

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/final_regular_info_circle_icon"
                    android:title="@string/nav_about_text" />


            </group>
        </menu>
    </item>
</menu>