<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/share"
        android:icon="@drawable/final_regular_share_icon"
        android:title="@string/favourites_toolbar_share_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/voice"
        android:title="@string/favourites_toolbar_voice_text"
        app:showAsAction="always"
        android:icon="@drawable/final_regular_voice_icon"/>

    <item
        android:id="@+id/sort"
        android:title="@string/favourites_toolbar_sort_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/check"
        android:title="@string/favourites_toolbar_check_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/unCheck"
        android:title="@string/favourites_toolbar_unCheck_text"
        app:showAsAction="never" />


</menu>