<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_popup"
    android:orientation="vertical">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/illustration_no_signal" />

    <LinearLayout
        android:id="@+id/emptyTextLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:orientation="vertical">


        <TextView
            android:id="@+id/no_connection_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/no_connection_layout_no_connection_text_1"
            android:textColor="?attr/textFillColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_connection_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/no_connection_layout_no_connection_text_2"
            android:textColor="?attr/textFillColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/no_connection_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_connection_layout_no_connection_text_3"
            android:textColor="?attr/textFillColor"
            android:textSize="18sp" />


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="?attr/buttonTint"
        android:gravity="center"
        android:text="@string/no_connection_layout_try_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>