<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_popup"
    android:orientation="vertical">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/final_regular_diamond_filled_icon" />

    <LinearLayout
        android:id="@+id/emptyTextLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:orientation="vertical">


        <TextView
            android:id="@+id/upgrade_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/upgrade_required_layout_upgrade_text_1"
            android:textColor="?attr/textFillColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/upgrade_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="20dp"
            android:text="@string/upgrade_required_layout_upgrade_text_2"
            android:textColor="?attr/textFillColor"
            android:textSize="18sp" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/upgradeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?attr/buttonTint"
        android:gravity="center"
        android:minHeight="56dp"
        android:text="@string/upgrade_required_layout_upgradeBtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/upgrade_required_layout_cancelButton"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="?attr/textFillColor"
        android:textStyle="bold" />


</LinearLayout>