<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_popup"
    android:orientation="vertical">


    <TextView
        android:id="@+id/Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/voice_typing_layout_Heading"
        android:textAlignment="center"
        android:textColor="?attr/textFillColor"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="20dp"
        android:hint="@string/voice_typing_layout_description"
        android:textColor="?attr/textFillColor"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:lineSpacingExtra="4dp"
            android:maxLines="5"
            android:textColor="?attr/textFillColor"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp">


        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:text="@string/voice_typing_cancelButton"
            android:textAllCaps="false"
            android:textColor="?attr/textFillColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="110dp"
            android:layout_height="56dp"
            android:backgroundTint="?attr/buttonTint"
            android:text="@string/voice_typing_addBtn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>