<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_popup"
    android:orientation="vertical">


    <TextView
        android:id="@+id/renameHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/update_category_name_layout_header_text"
        android:textAlignment="center"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="20dp"
        android:hint="@string/update_category_name_textBox_hint"
        android:textColor="?attr/colorOnSurface"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:lineSpacingExtra="4dp"
            android:maxLines="5"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="?attr/buttonTint"
        android:gravity="center"
        android:text="@string/update_category_name_layout_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>