<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:background="?attr/backgroundColor"
    android:orientation="vertical">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/custom_image_upload_dialog__header"
        android:textColor="?attr/textFillColor"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/trackColor"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="4dp"
        android:textColor="?attr/textFillColor" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:minHeight="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?attr/buttonTint"
        android:gravity="center"
        android:text="@string/custom_image_upload_dialog__login_btn"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/cancel_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/custom_image_upload_dialog__cancel_btn"
        android:layout_gravity="center"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginBottom="10dp" />

</LinearLayout>